syntax = "proto3";

option csharp_namespace = "JDBC.NET.Proto";

package proto;

message JdbcDataColumn {
  int32 ordinal = 1;
  string tableName = 2;
  string schemaName = 3;
  string columnName = 4;
  int32 columnDisplaySize = 5;
  int32 columnPrecision = 6;
  int32 columnScale = 7;
  string dataTypeName = 8;
  string dataTypeClassName = 9;
  int32 dataTypeCode = 10;
  bool isAutoIncrement = 11;
  bool isCaseSensitive = 12;
  bool isDefinitelyWritable = 13;
  bool isSearchable = 14;
  int32 isNullable = 15;
  bool isWritable = 16;
  bool isCurrency = 17;
  bool isReadOnly = 18;
  bool isSigned = 19;
}

message JdbcDataRow {
  repeated JdbcDataItem items = 1;
}

message JdbcDataItem {
  oneof value {
    string text = 1;
    bytes byteArray = 2;
  }
  bool isNull = 3;
}