syntax = "proto3";

option csharp_namespace = "JDBC.NET.Proto";

package proto.reader;

service ReaderService {
  rpc readResultSet (ReadResultSetRequest) returns (stream ReadResultSetResponse);
}

message ReadResultSetRequest {
  string resultSetId = 1;
}

message ReadResultSetResponse {
  string value = 1;
}
